testsuite/tests/typecheck/should_fail/T5689.stderr

T5689.hs:10:36: error:
    Couldn't match expected type ‘Bool’ with actual type ‘t’
    Relevant bindings include
      v :: t (bound at T5689.hs:10:28)
      r :: IORef (t -> t) (bound at T5689.hs:7:14)
    In the expression: v
    In the expression: if v then False else True
